<resources>
    <string name="app_name">MovieDB_part_two</string>
    <string name="image_name">Image Name</string>
    <string name="detail_imageview">Detail_Image_View</string>
    <string name="overviewText_name">Overview:</string>
    <string name="releaseText_name">Release Date:</string>
    <string name="voteText_name">Vote:</string>
    <string name="detail_Panel_name">Movie Detail</string>
    <string name="actionbar_spinner">Spinner</string>
    <string name="main_app_name">JFlix</string>
    <string name="TitleText_Name">Title:</string>
    <string name="trailer_headline">Trailer:</string>
    <string name="trailer_one_Textview">Offical Trailer HD</string>
    <string name="trailer_Two_Textview">Trailer 2 </string>
    <string name="trailer_Three_Textview">Trailer 3 </string>
    <string name="trailer_Four_Textview">Trailer 4 </string>
    <string name="trailer_Five_Textview">Trailer 5 </string>
    <string name="trailer_Six_Textview">Trailer 6 </string>
    <string name="image_botton1">Image Button 1</string>
    <string name="image_botton2">Image Button 2</string>
    <string name="image_botton3">Image Button 3</string>
    <string name="favorite">Favorite</string>
    <string name="reviews">Reviews:</string>
    <string-array name="default_sort">
        <item>Sort by</item>
        <item>Popularity</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>

</resources>
